fix(stylings): re-align the svg icons & single/multiple-select icon+text (#194)
- add sass utilities for material icon vertical alignment

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -762,6 +762,7 @@ $multiselect-icon-border:                             none !default;
 $multiselect-icon-border-radius:                      none !default;
 $multiselect-icon-height:                             $icon-font-size !default;
 $multiselect-icon-margin:                             0 !default;
+$multiselect-icon-vertical-align:                     middle !default;
 $multiselect-icon-width:                              20px !default;
 $multiselect-icon-unchecked:                          "\f096" !default;
 $multiselect-icon-unchecked-color:                    $multiselect-icon-color !default;
